# soundtrack-ml

./: .gitignore  README.md
search/: .dockerignore  Dockerfile  pyproject.toml
search/app/: flow.txt  orchestrator.py  search_app.py
search/app/retrievers/: album_retriever.py  artist_retriever.py  base.py  combined_retriever.py  config.yaml  playlist_retriever.py  specifications.py  track_retriever.py  utils.py
search/app/utils/: logging.py
search/deployment/: deploy_to_gcp.sh
search/embeddings/sparse/album/: config.yaml  create_embeddings.py  search_embeddings.py  upsert_embeddings.py
search/embeddings/sparse/artist/: config.yaml  create_embeddings.py  search_embeddings.py  upsert_embeddings.py  utils.py
search/embeddings/sparse/combined/: config.yaml  create_embeddings.py  search_embeddings.py  upsert_embeddings.py
search/embeddings/sparse/playlist/: config.yaml  create_embeddings.py  search_embeddings.py  upsert_embeddings.py
search/notebooks/: search copy.ipynb  search.ipynb  search_bad.ipynb  sellpy_userrecs.ipynb
search/smart_shuffle/: .gitignore  README.md  pyproject.toml
search/smart_shuffle/embeddings/: embeddings.py
search/smart_shuffle/notebooks/: testing.ipynb
smart_shuffle/: .gitignore  README.md  __init__.py  pyproject.toml
smart_shuffle/data_fetching/: download_data.py
smart_shuffle/embeddings/: __init__.py
smart_shuffle/embeddings/ml_emb/track_playlist_emb/: __init__.py  config.yaml  data_transform.py  deploy_embeddings.py  train_w2v.py
smart_shuffle/models/track_playlist/: spotify_w2v_metadata.json
(+7 files in other folders)
