[project]
name = "soundtrack-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.13",
    "gensim>=4.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "configparser>=7.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0", # Often useful for notebooks
    "seaborn>=0.11.0", # Often useful for data visualization
    "scikit-learn>=1.0.0",
    "hdbscan>=0.8.40",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "fastembed>=0.7.3",
    "sentence-transformers>=5.1.2",
    "tensorflow>=2.20.0",
]
